@@ -2,6 +2,15 @@
 
 	Source clean up.
 
+	* src/filterhtml.cpp (FilterHtml::GetNextToken):
+	  - Check for EOF on every getc, instead of occasionally checking
+	    feof().
+	  - Rewrite token collecting loop to be more concise.
+
+2012-06-29  Theppitak Karoonboonyanan  <thep@linux.thai.net>
+
+	Source clean up.
+
 	* src/filterx.h, src/filterhtml.h, src/filterhtml.cpp:
 	  - Move FilterX::chbuff member to FilterHtml, as it's implementation
 	    specific and was only used here. (FilterLatex uses different kind
